# serverframework

./: .gitignore  CMakeLists.txt  connector.sln
authServer/: AuthProcThread.cpp  AuthProcThread.h  CMakeLists.txt  authSever.vcxproj  authSever.vcxproj.filters  main.cpp  server.pem
authServer/x64/Debug/: vc141.idb
authServer/x64/Debug/authSever.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  authSever.lastbuildstate  authSever.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
authSever/: authSever.vcxproj
authSever/x64/Debug/: vc141.idb
authSever/x64/Debug/authSever.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  authSever.write.1u.tlog
client/: .qmake.stash  client.pro  client.vcxproj  client.vcxproj.filters  main.cpp  main.qml  networkrelatelogic.cpp  networkrelatelogic.h
common/include/: CPUIntensiveThread.h  CustomForwardDeclare.h  CustomMacro.h  DBManager.h  DumpManager.h  HttpManagerPair.h  HttpsManagerPair.h  JsonStructs.h  LogInit.h  MessageQueueManager.h  PBMessageCallBacks.h  PBMesssageForwardDeclare.h  PBMsgCallBackDispatcher.h  PBMsgCallBackImpl.h  PBMsgCallBackInterface.h  PackUtils.h  PrimitiveDef.h  ProcManager.h  ProcManagerInterface.h  ProcessMessageImpl.h  ProcessMessageInterface.h  SWebSocketManagerPair.h  SessionManager.h  ThirdPartyuWS.h  Utils.h  WebBaseInterface.h  WebManagerPair.cpp  WebManagerPair.h  WebSocketManagerPair.h  WrapperCaller.h  comm_def.h  query.pb.h  share_def.h  winmain-inl.h
common/include/iguana/iguana/: json.hpp
common/include/otlv4_h2/: otlv4.h
common/src/: CPUIntensiveThread.cpp  DBManager.cpp  DumpManager.cpp  HttpManagerPair.cpp  HttpsManagerPair.cpp  LogInit.cpp  MessageQueueManager.cpp  PBMessageCallBacks.cpp  PBMsgCallBackDispatcher.cpp  PackUtils.cpp  ProcManager.cpp  ProcessMessageImpl.cpp  SWebSocketManagerPair.cpp  SessionManager.cpp  Utils.cpp  WebManagerPair.cpp  WebSocketManagerPair.cpp  query.pb.cc
connector/: CMakeLists.txt  connector.vcxproj  connector.vcxproj.filters  main.cpp
connector/x64/Debug/: vc141.idb
connector/x64/Debug/connector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  connector.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dbManager/: CMakeLists.txt  NngRelateManager.cpp  NngRelateManager.h  dbManager.vcxproj  dbManager.vcxproj.filters  main.cpp
dbManager/x64/Debug/: vc141.idb
dbManager/x64/Debug/dbManager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dbManager.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
logicServer/: CMakeLists.txt  logicServer.vcxproj  server.key
logicServer/x64/Debug/: vc141.idb
logicServer/x64/Debug/logicServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  logicServer.lastbuildstate  logicServer.write.1u.tlog
